--- a/boltzr/Cargo.toml
+++ b/boltzr/Cargo.toml
@@ -135,6 +135,7 @@ elements-miniscript = "0.4.0"
 rand = "0.9.0"
 tokio-stream = "0.1.17"
 payjoin = { version = "0.23.0", features = ["io"] }
+bitcoincore-rpc = "0.19.0"
 
 [build-dependencies]
 built = { version = "0.7.7", features = ["git2"] }
